@@ -1,21 +1,21 @@
 /* ==================================================================
  * ArrayUtils.java - 16/03/2018 6:48:58 AM
- * 
+ *
  * Copyright 2018 SolarNetwork.net Dev Team
- * 
- * This program is free software; you can redistribute it and/or 
- * modify it under the terms of the GNU General Public License as 
- * published by the Free Software Foundation; either version 2 of 
+ *
+ * This program is free software; you can redistribute it and/or
+ * modify it under the terms of the GNU General Public License as
+ * published by the Free Software Foundation; either version 2 of
  * the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, 
- * but WITHOUT ANY WARRANTY; without even the implied warranty of 
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU 
+ *
+ * This program is distributed in the hope that it will be useful,
+ * but WITHOUT ANY WARRANTY; without even the implied warranty of
+ * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
  * General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License 
- * along with this program; if not, write to the Free Software 
- * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 
+ *
+ * You should have received a copy of the GNU General Public License
+ * along with this program; if not, write to the Free Software
+ * Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA
  * 02111-1307 USA
  * ==================================================================
  */
@@ -23,6 +23,7 @@
 package net.solarnetwork.util;
 
 import java.lang.reflect.Array;
+import java.lang.reflect.InvocationTargetException;
 import java.util.Arrays;
 import java.util.LinkedHashSet;
 import java.util.Set;
@@ -33,7 +34,7 @@ import org.springframework.beans.factory.ObjectFactory;
 
 /**
  * Utilities for dealing with arrays.
- * 
+ *
  * @author matt
  * @version 1.3
  * @since 1.42
@@ -47,7 +48,7 @@ public final class ArrayUtils {
 	/**
 	 * Adjust an array to a specific length, filling in any new elements with
 	 * newly objects.
-	 * 
+	 *
 	 * <p>
 	 * This method can shorten or lengthen an array of objects. After adjusting
 	 * the array length, any {@literal null} element in the array will be
@@ -57,14 +58,14 @@ public final class ArrayUtils {
 	 * (or class constructor if no {@code factory} provided) will be called for
 	 * <b>each</b> {@literal null} array index.
 	 * </p>
-	 * 
+	 *
 	 * <p>
 	 * Note that if a size adjustment is made, a new array instance is returned
 	 * from this method, with elements copied from {@code array} where
 	 * appropriate. If no size adjustment is necessary, then {@code array} is
 	 * returned directly.
 	 * </p>
-	 * 
+	 *
 	 * @param <T>
 	 *        the array item type
 	 * @param array
@@ -90,7 +91,7 @@ public final class ArrayUtils {
 	/**
 	 * Adjust an array to a specific length, filling in any new elements with
 	 * newly objects.
-	 * 
+	 *
 	 * <p>
 	 * This method can shorten or lengthen an array of objects. After adjusting
 	 * the array length, any {@literal null} element in the array will be
@@ -100,14 +101,14 @@ public final class ArrayUtils {
 	 * (or class constructor if no {@code factory} provided) will be called for
 	 * <b>each</b> {@literal null} array index.
 	 * </p>
-	 * 
+	 *
 	 * <p>
 	 * Note that if a size adjustment is made, a new array instance is returned
 	 * from this method, with elements copied from {@code array} where
 	 * appropriate. If no size adjustment is necessary, then {@code array} is
 	 * returned directly.
 	 * </p>
-	 * 
+	 *
 	 * @param <T>
 	 *        the array item type
 	 * @param array
@@ -143,10 +144,10 @@ public final class ArrayUtils {
 						newIncs[i] = factory.get();
 					} else {
 						try {
-							newIncs[i] = itemClass.newInstance();
-						} catch ( InstantiationException e ) {
-							throw new RuntimeException(e);
-						} catch ( IllegalAccessException e ) {
+							newIncs[i] = itemClass.getDeclaredConstructor().newInstance();
+						} catch ( IllegalArgumentException | InvocationTargetException
+								| NoSuchMethodException | SecurityException | IllegalAccessException
+								| InstantiationException e ) {
 							throw new RuntimeException(e);
 						}
 					}
@@ -159,14 +160,14 @@ public final class ArrayUtils {
 
 	/**
 	 * Filter a set of strings based on enabled/disabled patterns.
-	 * 
+	 *
 	 * <p>
 	 * The {@code enabled} patterns are applied first, followed by
 	 * {@code disabled}. Both arguments are optional. The patterns are treated
 	 * in a case-insensitive manner, using {@link Matcher#find()} to find
 	 * partial matches.
 	 * </p>
-	 * 
+	 *
 	 * @param list
 	 *        the list to filter
 	 * @param enabled
@@ -201,11 +202,11 @@ public final class ArrayUtils {
 	/**
 	 * Test if an array has only {@literal null} elements or is itself
 	 * {@literal null} or empty.
-	 * 
+	 *
 	 * <p>
 	 * This method will perform a linear search for the first non-null element.
 	 * </p>
-	 * 
+	 *
 	 * @param array
 	 *        the array to test
 	 * @return {@literal true} if {@code array} is {@literal null}, empty, or
